--- a/app/design/frontend/Epicom/Base/Magento_Theme/layout/default_head_blocks.xml
+++ b/app/design/frontend/Epicom/Base/Magento_Theme/layout/default_head_blocks.xml
@@ -2,7 +2,7 @@
 	<head>
 		<!-- Local Resources -->
 		<!-- <css src="style.css" /> -->
-		<!-- <script src="Magento_Catalog::js/myjs.js" /> -->
+		<!-- <script src="js/address-autocomplete.js" /> -->
 		<!-- <link src="js/myjs/js" /> -->
 
 		<!-- External Resources -->
