--- a/app/design/frontend/Epicom/Base/web/css/source/_extend.less
+++ b/app/design/frontend/Epicom/Base/web/css/source/_extend.less
@@ -15,7 +15,10 @@
 
 
 // Menu
-.nav-sections{ margin-bottom: 0px; }
+
+.nav-sections{ margin-bottom: 10px; }
+.cms-home.cms-index-index .nav-sections{ margin-bottom: 0px; }
+
 .navigation .level0 > .level-top:hover, .navigation .level0 > .level-top.ui-state-focus{
 	background: rgba(0,0,0,0.1);
 }
@@ -54,3 +57,24 @@
 		display: none;
 	}
 }
+
+
+
+// Checkout 
+.opc-progress-bar-item._active:before {
+    background: #bf2c5e;
+    border-color: #b62a5a;
+}
+.opc-progress-bar-item._active>span:before {
+    background: #bf2c5e;
+    border-color: #bf2c5e;
+}
+.opc-progress-bar-item._active>span:after {
+    border-color: #22142f;
+}
+
+
+
+
+
+
