--- a/app/design/frontend/Epicom/Base/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Epicom/Base/Magento_Theme/layout/default.xml
@@ -3,8 +3,8 @@
         <referenceBlock name="logo">
             <arguments>
                 <argument name="logo_file" xsi:type="string">images/logo.png</argument>
-                 <argument name="logo_img_width" xsi:type="number">300</argument>
-                <argument name="logo_img_height" xsi:type="number">300</argument> 
+                <argument name="logo_width" xsi:type="number">200</argument>
+                <argument name="logo_alt" xsi:type="string">Epicom Shop</argument>
             </arguments>
         </referenceBlock>
 
