--- a/app/design/frontend/Epicom/Base/web/css/source/_extend.less
+++ b/app/design/frontend/Epicom/Base/web/css/source/_extend.less
@@ -8,7 +8,6 @@ select, input[type="text"], input[type="password"], input[type="url"], input[typ
 }
 
 // Header
-
 .checkout-index-index .page-header {
     border-bottom: 1px solid #cccccc !important;
     margin-bottom: 20px !important;
@@ -19,13 +18,11 @@ select, input[type="text"], input[type="password"], input[type="url"], input[typ
 	border-radius: 20px;
 }
 
-
 // MiniCart
 .minicart-wrapper .action.showcart .counter.qty{
 	background: #c32d60;
 	border-radius: 50%;
 }
-
 
 // Menu
 .nav-sections{ margin-bottom: 30px; }
@@ -44,25 +41,21 @@ select, input[type="text"], input[type="password"], input[type="url"], input[typ
 
 
 // Buttons
-.action{
-	&.primary{
-		background-color: #231b32;
-		border-color: #231b32; 
-		&:hover, &:active, &:focus{
-			background: #130e1b; 
-			border: 1px solid #130e1b; 
-		}
-	}
-	
-}
+// .action{
+// 	&.primary{
+// 		background-color: #231b32;
+// 		border-color: #231b32; 
+// 		&:hover, &:active, &:focus{
+// 			background: #130e1b; 
+// 			border: 1px solid #130e1b; 
+// 		}
+// 	}
+// }
 
 // Product View
-
-
 .fotorama__thumb-border{
 	border: 1px solid #c32d60;
 }
-
 
 // Home
 .cms-home.cms-index-index{
@@ -71,19 +64,17 @@ select, input[type="text"], input[type="password"], input[type="url"], input[typ
 	}
 }
 
-
-
 // Checkout 
 .opc-progress-bar-item._active:before {
-    background: #bf2c5e;
-    border-color: #b62a5a;
+    background: #c32d60;
+    border-color: #c32d60;
 }
 .opc-progress-bar-item._active>span:before {
-    background: #bf2c5e;
-    border-color: #bf2c5e;
+    background: #c32d60;
+    border-color: #c32d60;
 }
 .opc-progress-bar-item._active>span:after {
-    border-color: #22142f;
+    border-color: #c32d60;
 }
 
 .page-header .header.content .genral-content .top-content .itens-content .minicart-wrapper .actions .primary .action.primary {
