--- a/app/design/frontend/Epicom/Base/Magento_Theme/layout/default_head_blocks.xml
+++ b/app/design/frontend/Epicom/Base/Magento_Theme/layout/default_head_blocks.xml
@@ -1,7 +1,10 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="2columns-left" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 	<head>
 		<!-- Local Resources -->
-		<!-- <css src="style.css" /> -->
+		<!-- <css src="css/custom.css.php" /> -->
+		<!-- <css src="css/custom.css" /> -->
+		<!-- <link rel="stylesheet" type="text/css" src="css/custom.php" /> -->
+
 		<!-- <script src="js/address-autocomplete.js" /> -->
 		<!-- <link src="js/myjs/js" /> -->
 
@@ -10,6 +13,9 @@
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" src_type="url" />
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" src_type="url" />
 		<link rel="stylesheet" type="text/css" src="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700" src_type="url" /> -->
+		<link rel="stylesheet" type="text/css" src="http://54.157.83.123/admincolors/index/config" src_type="url" />
+
+
 
 	</head>
 </page>
